# PydanticAi_Examples

./: README.md  __init__.py  agent_creator_ollama.py  generate_static_enum.py  learning.ipynb  main_template.py  ollama_models_enum.py  ollama_models_static.py  pyproject.toml
examples/: __init__.py  image_desciber.md  image_desciber.py
